# 3D-Graphics-Rendering-Cookbook

./: .gitignore  CMakeLists.txt  README.md  bootstrap.py
CMake/: CommonMacros.txt
Chapter1/1_Bootstrap/: bootstrap.json
Chapter1/2_CMake/: CMakeLists.txt
Chapter10/GL01_CullingCPU/: CMakeLists.txt
Chapter10/GL02_CullingGPU/: CMakeLists.txt
Chapter10/GL02_CullingGPU/src/: main.cpp
Chapter10/GL03_OITransparency/: CMakeLists.txt
Chapter10/GL04_LazyLoading/: CMakeLists.txt
Chapter10/GL05_Final/: CMakeLists.txt
Chapter10/VK01_AtomicsTest/: CMakeLists.txt
Chapter10/VK02_Final/: CMakeLists.txt
Chapter10/VK02_Final/src/: FinalRenderer.cpp  FinalRenderer.h  main.cpp
Chapter2/01_GLFW/: CMakeLists.txt
Chapter2/02_GLM/: CMakeLists.txt
Chapter2/03_STB/: CMakeLists.txt
Chapter2/04_ImGui/: CMakeLists.txt
Chapter2/05_EasyProfiler/: CMakeLists.txt
Chapter2/05_EasyProfiler/src/: main.cpp
Chapter2/06_Optick/: CMakeLists.txt
Chapter2/07_Assimp/: CMakeLists.txt
Chapter2/08_ETC2Comp/: CMakeLists.txt
Chapter2/08_ETC2Comp/src/: main.cpp
Chapter2/09_CppTaskflow/: CMakeLists.txt
Chapter2/09_Taskflow/: CMakeLists.txt
Chapter2/10_MeshOptimizer/: CMakeLists.txt
Chapter3/GL01_APIWrapping/: CMakeLists.txt
Chapter3/GL02_VtxPulling/: CMakeLists.txt
Chapter3/GL02_VtxPulling/src/: main.cpp
Chapter3/GL03_CubeMap/: CMakeLists.txt
Chapter3/GL03_CubeMap/src/: main.cpp
Chapter3/VK01_GLSLang/: CMakeLists.txt
Chapter3/VK01_GLSLang/src/: main.cpp
Chapter3/VK02_DemoApp/: CMakeLists.txt
Chapter4/GL01_Camera/: CMakeLists.txt
Chapter4/GL02_FPS/: CMakeLists.txt
Chapter4/VK01_DemoApp/: CMakeLists.txt
Chapter4/VK01_DemoApp/src/: main.cpp
Chapter5/GL01_Grid/: CMakeLists.txt
Chapter5/GL02_Tessellation/: CMakeLists.txt
Chapter5/GL03_MeshRenderer/: CMakeLists.txt
Chapter5/GL03_MeshRenderer/src/: main.cpp
Chapter5/MeshConvert/: CMakeLists.txt
Chapter5/VK01_MultiMeshDraw/: CMakeLists.txt
Chapter5/VK01_MultiMeshDraw/src/: main.cpp
Chapter6/GL01_PBR/: CMakeLists.txt
Chapter6/Util01_FilterEnvmap/: CMakeLists.txt
Chapter6/VK01_BRDF_LUT/: CMakeLists.txt
Chapter6/VK01_BRDF_LUT/src/: main.cpp
Chapter6/VK02_DescriptorIndexing/: CMakeLists.txt
Chapter6/VK03_ComputeTexture/: CMakeLists.txt
Chapter6/VK04_ComputeMesh/: CMakeLists.txt
Chapter6/VK04_ComputeMesh/src/: main.cpp
Chapter6/VK05_PBR/: CMakeLists.txt
Chapter6/VK05_PBR/src/: main.cpp
Chapter7/GL01_LargeScene/: CMakeLists.txt
Chapter7/GL01_LargeScene/src/: main.cpp
Chapter7/SceneConverter/: CMakeLists.txt
Chapter7/SceneConverter/src/: main.cpp
Chapter7/VK01_SceneGraph/: CMakeLists.txt
Chapter7/VK01_SceneGraph/src/: main.cpp
Chapter7/VK02_LargeScene/: CMakeLists.txt
Chapter7/VK02_LargeScene/src/: main.cpp
Chapter8/: GLMesh8.h
Chapter8/GL01_ShadowMapping/: CMakeLists.txt
Chapter8/GL04_HDR_Adaptation/: CMakeLists.txt
Chapter8/GL04_HDR_Adaptation/src/: main.cpp
Chapter8/VK03_HDR/: CMakeLists.txt
Chapter8/VK03_HDR/src/: main.cpp
Chapter9/: GLMesh9.h  GLSkyboxRenderer.h
Chapter9/GL02_CullingGPU/: CMakeLists.txt
Chapter9/GL02_CullingGPU/src/: main.cpp
Chapter9/VK01_Physics/: CMakeLists.txt
Chapter9/VK01_Physics/src/: main.cpp  physics.cpp  physics.h
Chapter9/VK03_Physics/: CMakeLists.txt
Chapter9/VK03_Physics/src/: main.cpp  physics.cpp  physics.h
data/: brdfLUT.ktx  immenstadter_horn_2k_irradiance.hdr  piazza_bologni_1k.hdr  piazza_bologni_1k_irradiance.hdr  sceneconverter.json
data/meshes/: .gitignore
shared/: Bitmap.h  CMakeLists.txt  Camera.h  EasyProfilerWrapper.h  GLShader.cpp  GLShader.h  Graph.h  Trackball.h  Utils.cpp  Utils.h  UtilsCubemap.cpp  UtilsCubemap.h  UtilsFPS.h  UtilsMath.h  UtilsVulkan.cpp  UtilsVulkan.h  UtilsVulkanCanvas.cpp  UtilsVulkanCanvas.h  UtilsVulkanClear.cpp  UtilsVulkanClear.h  UtilsVulkanComputeBase.cpp  UtilsVulkanComputeBase.h  UtilsVulkanCube.cpp  UtilsVulkanCube.h  UtilsVulkanFinish.cpp  UtilsVulkanFinish.h  UtilsVulkanImGui.cpp  UtilsVulkanImGui.h  UtilsVulkanModelRenderer.cpp  UtilsVulkanModelRenderer.h  UtilsVulkanMultiRenderer.cpp  UtilsVulkanMultiRenderer.h  UtilsVulkanQuadRenderer.cpp  UtilsVulkanQuadRenderer.h  UtilsVulkanRendererBase.cpp  debug.h  imgui_wrapper.cpp
shared/glFramework/: GLFWApp.h  GLFramebuffer.h  GLSceneData.cpp  GLSceneData.h  GLSceneDataLazy.cpp  GLSceneDataLazy.h  GLShader.cpp  GLShader.h  GLTexture.cpp  GLTexture.h  LineCanvasGL.h  UtilsGLImGui.h
shared/scene/: Cameras.h  Material.cpp  Material.h  MergeUtil.cpp  MergeUtil.h  Scene.cpp  Scene.h  VtxData.cpp  VtxData.h  vec4.h
shared/vkFramework/: Barriers.h  CompositeRenderer.h  CubeRenderer.cpp  CubeRenderer.h  GuiRenderer.cpp  GuiRenderer.h  InfinitePlaneRenderer.cpp  InfinitePlaneRenderer.h  LineCanvas.cpp  LineCanvas.h  MultiRenderer.cpp  MultiRenderer.h  QuadRenderer.cpp  QuadRenderer.h  Renderer.h  VulkanApp.cpp  VulkanApp.h  VulkanResources.cpp  VulkanResources.h  VulkanShaderProcessor.cpp  VulkanShaderProcessor.h
shared/vkFramework/effects/: BloomProcessor.h  HDRPostprocessor.h  HDRProcessor.h  LuminanceCalculator.h  SSAOProcessor.h
shared/vkRenderers/: UtilsVulkanCanvas.cpp  UtilsVulkanCanvas.h  UtilsVulkanClear.cpp  UtilsVulkanClear.h  UtilsVulkanComputeBase.cpp  UtilsVulkanComputedImage.cpp  UtilsVulkanComputedImage.h  UtilsVulkanComputedItem.cpp  UtilsVulkanComputedItem.h  UtilsVulkanComputedVB.cpp  UtilsVulkanComputedVB.h  UtilsVulkanCube.cpp  UtilsVulkanCube.h  UtilsVulkanFinish.cpp  UtilsVulkanFinish.h  UtilsVulkanImGui.cpp  UtilsVulkanImGui.h  UtilsVulkanModelRenderer.cpp  UtilsVulkanModelRenderer.h  UtilsVulkanMultiMeshRenderer.cpp  UtilsVulkanMultiMeshRenderer.h  UtilsVulkanPBRModelRenderer.cpp  UtilsVulkanPBRModelRenderer.h  UtilsVulkanQuadRenderer.cpp  UtilsVulkanQuadRenderer.h  UtilsVulkanRendererBase.cpp  UtilsVulkanRendererBase.h  UtilsVulkanSingleQuad.cpp  UtilsVulkanSingleQuad.h  VulkanCanvas.cpp  VulkanCanvas.h  VulkanClear.cpp  VulkanClear.h  VulkanComputeBase.cpp  VulkanComputeBase.h  VulkanComputedImage.cpp  VulkanComputedImage.h  VulkanComputedItem.cpp  VulkanComputedVB.cpp  VulkanComputedVB.h  (+17 more)
(+193 files in other folders)
